--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@   5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <div class="form-container">
         <div class="header">
-            <img src="https://www.b2b-cambodia.com/cambodia-business-directory/sbi-ly-hour-bank/" alt="SbiLyHourLogo">
+            <img src="https://github.com/IIroha/index2.html/blob/main/sbilogo.png" alt="SbiLyHourLogo">
             <h1>Corporate Customer Information Form</h1>
         </div>
 
