--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
             <input type="text" id="contact" class="input">
         </div>
 
+      <div class="field">
+          <label for="Group/Village">Group?Village</label>
+          <input type="text" id="group" class="input">
+       </div>
+
         <div class="footer">
             <p>Page 1 of 4</p>
         </div>
