--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
 
       <div class="field">
-          <label for="Group/Village">Group?Village</label>
+          <label for="Group/Village">Group/Village</label>
           <input type="text" id="group" class="input">
        </div>
 
